# InterlockAssistant

./: .gitignore  README.md  SIS联锁调试助手.spec  build.py  cleanup_db.py  config.json  generate_icon.py  import_io_data.py  init_db.py  migrate_db.py  pyproject.toml  requirements.txt  run.bat  test_fuzzy.py  test_window.py  剪贴板监视助手.spec  项目说明.md
config/: config.json  engineering_code.json  target_window.json
docs/plans/: 2026-03-07-clipboard-monitor-design.md  2026-03-07-clipboard-monitor-implementation.md  2026-03-08-orm-refactor-csv-import-design.md  2026-03-08-window-data-watcher-refactor-design.md  2026-03-08-window-detector-design.md  2026-03-08-window-detector-implementation.md  2026-03-14-fuzzy-search-enhancement-design.md  2026-03-14-fuzzy-search-enhancement.md  access_name映射.txt  工程码转换规则.txt
src/: main.py
src/services/: clipboard_watcher.py  csv_importer.py  database_service.py  engineering_code.py  global_hotkey.py  hotkey_manager.py  models.py  ui_automation_reader.py  window_data_watcher.py  window_detector.py  window_focus_watcher.py  window_info.py  window_picker.py
src/ui/: config_window.py  floating_window.py  test_input_dialog.py  window_detector_window.py
src/utils/: __init__.py  icon_utils.py
tests/: test_clipboard_watcher.py  test_database_service.py  test_hotkey_manager.py  test_window_info.py
导入数据/: 合成.CSV  需要保留的列.txt
