[project]
name = "interlock-assistant"
version = "0.1.0"
description = "Windows剪贴板监视助手"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "PySide2==5.15.2.1",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]