[project]
name = "sis-interlock-assistant"
version = "0.1.0"
description = "SIS联锁调试助手"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.10.0",
    "comtypes>=1.4.8",
    "uiautomation>=2.0.8",
    "psutil>=6.0.0",
    "pywinauto>=0.6.8",
    "sqlalchemy>=2.0.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
]
